fix word wrap (	temporally) https://trello.com/c/qnE52xX6/56--

--- a/qua-ui/src/styles/answer-style.less
+++ b/qua-ui/src/styles/answer-style.less
@@ -1,3 +1,11 @@
+a,
+pre {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  white-space: normal;
+}
+
 p:first-child {
   margin-top: 0;
 }
+
